# EcoAI-DataCenter-Optimizer

./: Dockerfile  LICENSE  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
